Made changes to dl dt color to avoid low contrast

--- a/04intro-css/livadi.css
+++ b/04intro-css/livadi.css
@@ -76,7 +76,7 @@ main ol {
 }
 
 main dl dt {
-    color: #e9b57c;
+    color: #e99b3e;
     font-weight: 700;
     margin-top: 1rem;
 }
@@ -119,7 +119,7 @@ main address {
     width: 200px;
 }
 main a {
-    color:#e9b57c;
+    color:#e99b3e;
     text-decoration: none;
 
 }
